--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Resume - Start Bootstrap Theme
+        title Resume - Victor Soto
 
         link(rel='icon', type='image/x-icon', href='assets/img/favicon.ico')
 
@@ -27,9 +27,9 @@ html(lang='en')
         // Navigation
         nav#sideNav.navbar.navbar-expand-lg.navbar-dark.bg-primary.fixed-top
             a.navbar-brand.js-scroll-trigger(href='#page-top')
-                span.d-block.d-lg-none Clarence Taylor
+                span.d-block.d-lg-none Victor Soto
                 span.d-none.d-lg-block
-                    img.img-fluid.img-profile.rounded-circle.mx-auto.mb-2(src='assets/img/profile.jpg', alt='...')
+                    img.img-fluid.img-profile.rounded-circle.mx-auto.mb-2(src='assets/img/cv.png', alt='...')
             button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
                 span.navbar-toggler-icon
             #navbarResponsive.collapse.navbar-collapse
@@ -45,7 +45,7 @@ html(lang='en')
                     li.nav-item
                         a.nav-link.js-scroll-trigger(href='#interests') Interests
                     li.nav-item
-                        a.nav-link.js-scroll-trigger(href='#awards') Awards
+                        a.nav-link.js-scroll-trigger(href='#awards') Certifications
 
         // Page Content
         .container-fluid.p-0
@@ -54,22 +54,18 @@ html(lang='en')
             section#about.resume-section
                 .resume-section-content
                     h1.mb-0
-                        | Clarence 
-                        span.text-primary Taylor
+                        | Victor 
+                        span.text-primary Soto
                     .subheading.mb-5
-                        | 3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 · 
+                        | Mexico City · (+52) 55-6676-9310 ·
                         a(href='mailto:name@email.com') name@email.com
                     p.lead.mb-5
-                        | I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
+                        | I am an experienced backend developer with expertise in Java, Spring Boot, MySQL and Microsoft Server databases. I am also skilled in using Git and have a solid understanding of front-end development, including JavaScript, CSS, HTML, and some experience with React. I am passionate about creating high-quality, scalable, and maintainable software solutions, and am always looking for new challenges to help me grow as a developer.
                     .social-icons
-                        a.social-icon(href='#!')
+                        a.social-icon(href='https://www.linkedin.com/in/soto-alexander/' target='_blank')
                             i.fab.fa-linkedin-in
-                        a.social-icon(href='#!')
+                        a.social-icon(href='https://github.com/victoralexander132' target='_blank')
                             i.fab.fa-github
-                        a.social-icon(href='#!')
-                            i.fab.fa-twitter
-                        a.social-icon(href='#!')
-                            i.fab.fa-facebook-f
 
             hr.m-0
 
@@ -80,39 +76,30 @@ html(lang='en')
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 Senior Web Developer
-                            .subheading.mb-3 Intelitec Solutions
+                            h3.mb-0 Software Engineer
+                            .subheading.mb-3 Unosquare
                             p
-                                | Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
+                                | As a software developer at Unosquare, I collaborated with American clients to design, develop, and maintain software solutions using Java, databases, and other tools. My role involved analyzing business requirements, writing high-quality, scalable, and maintainable code, performing testing and debugging, and ensuring project timelines and quality standards were met. I also researched new technologies and industry trends, provided technical guidance and support to colleagues and clients, and contributed to the continuous improvement of development processes and best practices at Unosquare.
                         .flex-shrink-0
-                            span.text-primary March 2013 - Present
+                            span.text-primary August 2022 - Present
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 Web Developer
-                            .subheading.mb-3 Intelitec Solutions
+                            h3.mb-0 Junior Java Fullstack Developer
+                            .subheading.mb-3 Generation Mexico
                             p
-                                | Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
+                                | I completed the Java Junior Fullstack Web Development program at Generation Mexico, which provided me with intensive, hands-on training in Java and fullstack web development. Through the program, I gained practical skills in areas such as developing and testing web applications using Java, Spring Boot, and other technologies, creating and managing relational databases with MySQL, and designing and implementing front-end user interfaces with HTML, CSS, and JavaScript. The program also helped me develop essential soft skills, such as teamwork, problem-solving, and communication. With the support of Generation Mexico, I was able to secure a job in the field and continue to build on my skills and experience as a web developer.
                         .flex-shrink-0
-                            span.text-primary December 2011 - March 2013
+                            span.text-primary March 2022 - June 2022
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 Junior Web Designer
-                            .subheading.mb-3 Shout! Media Productions
+                            h3.mb-0 Geophysical Engineer
+                            .subheading.mb-3 Geoexplora
                             p
-                                | Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.
+                                | As a data processing specialist at Geoexplora, I collaborated with geoscientists and other technical experts to ensure that data was accurately processed and analyzed, and helped develop and implement new data processing workflows and methodologies. In addition, I was responsible for creating and managing Bash scripts to automate various data processing and analysis tasks, which helped improve efficiency and accuracy. My role also involved troubleshooting technical issues and providing technical support to colleagues as needed. Through this experience, I developed strong technical skills in data processing, analysis, and management, as well as proficiency in Bash scripting and problem-solving.
                         .flex-shrink-0
-                            span.text-primary July 2010 - December 2011
-
-                    .d-flex.flex-column.flex-md-row.justify-content-between
-                        .flex-grow-1
-                            h3.mb-0 Web Design Intern
-                            .subheading.mb-3 Shout! Media Productions
-                            p
-                                | Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
-                        .flex-shrink-0
-                            span.text-primary September 2008 - June 2010
+                            span.text-primary March 2021 - March 2022
 
             hr.m-0
 
@@ -123,20 +110,10 @@ html(lang='en')
 
                     .d-flex.flex-column.flex-md-row.justify-content-between.mb-5
                         .flex-grow-1
-                            h3.mb-0 University of Colorado Boulder
-                            .subheading.mb-3 Bachelor of Science
-                            div Computer Science - Web Development Track
-                            p GPA: 3.23
+                            h3.mb-0 National Autonomous University of Mexico (UNAM)
+                            .subheading.mb-3 Bachelor of Engineering in Geophysics
                         .flex-shrink-0
-                            span.text-primary August 2006 - May 2010
-
-                    .d-flex.flex-column.flex-md-row.justify-content-between
-                        .flex-grow-1
-                            h3.mb-0 James Buchanan High School
-                            .subheading.mb-3 Technology Magnet Program
-                            p GPA: 3.56
-                        .flex-shrink-0
-                            span.text-primary August 2002 - May 2006
+                            span.text-primary August 2014 - May 2019
 
             hr.m-0
 
@@ -147,43 +124,49 @@ html(lang='en')
                     .subheading.mb-3 Programming Languages & Tools
                     ul.list-inline.dev-icons
                         li.list-inline-item
+                            i.fab.fa-java
+                        li.list-inline-item
+                            i.fab.fa-node-js
+                        li.list-inline-item
+                            i.fab.fa-npm
+                        li.list-inline-item
                             i.fab.fa-html5
                         li.list-inline-item
                             i.fab.fa-css3-alt
                         li.list-inline-item
                             i.fab.fa-js-square
                         li.list-inline-item
-                            i.fab.fa-angular
+                            i.fab.fa-github
                         li.list-inline-item
                             i.fab.fa-react
                         li.list-inline-item
-                            i.fab.fa-node-js
+                            i.fab.fa-docker
                         li.list-inline-item
-                            i.fab.fa-sass
+                            i.fab.fa-figma
                         li.list-inline-item
-                            i.fab.fa-less
-                        li.list-inline-item
-                            i.fab.fa-wordpress
-                        li.list-inline-item
-                            i.fab.fa-gulp
-                        li.list-inline-item
-                            i.fab.fa-grunt
-                        li.list-inline-item
-                            i.fab.fa-npm
+                            i.fab.fa-linux
                     .subheading.mb-3 Workflow
                     ul.fa-ul.mb-0
                         li
                             span.fa-li
                                 i.fas.fa-check
+                            | Java-based Backend Development
+                        li
+                            span.fa-li
+                                i.fas.fa-check
+                            | RESTful API Design & Development
+                        li
+                            span.fa-li
+                                i.fas.fa-check
+                            | SQL Database Design & Management
+                        li
+                            span.fa-li
+                                i.fas.fa-check
+                            | Git Version Control & Collaboration
+                        li
+                            span.fa-li
+                                i.fas.fa-check
                             | Mobile-First, Responsive Design
-                        li
-                            span.fa-li
-                                i.fas.fa-check
-                            | Cross Browser Testing & Debugging
-                        li
-                            span.fa-li
-                                i.fas.fa-check
-                            | Cross Functional Teams
                         li
                             span.fa-li
                                 i.fas.fa-check
@@ -196,55 +179,38 @@ html(lang='en')
                 .resume-section-content
                     h2.mb-5 Interests
                     p
-                        | Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.
+                        | In my free time, I enjoy a variety of activities outside of software development. I am an avid gamer, and enjoy both console and PC games. I also enjoy spending time outdoors, taking my dog for walks and playing fetch. Another hobby of mine is bowling, which I find to be a great way to relax and socialize.
                     p.mb-0
-                        | When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.
+                        | Finally, I have a passion for stargazing, and often enjoy camping trips to remote locations where the skies are clear and the stars are bright.
 
             hr.m-0
 
             // Awards
             section#awards.resume-section
                 .resume-section-content
-                    h2.mb-5 Awards & Certifications
+                    h2.mb-5 Certifications
                     ul.fa-ul.mb-0
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
-                            | Google Analytics Certified Developer
+                            | Google Data Analytics - Coursera Certification
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
-                            | Mobile Web Specialist - Google Certification
+                            | ONE Oracle Next Education - Oracle Certification
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
-                            | 1
-                            sup st 
-                            | Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            | Remote Work Professional - Taravy Certification
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
-                            | 1
-                            sup st 
-                            | Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            | IELTS for UKVI Academic - Englis Language Proficiency
                         li
                             span.fa-li
                                 i.fas.fa-trophy.text-warning
-                            | 2
-                            sup nd 
-                            | Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        li
-                            span.fa-li
-                                i.fas.fa-trophy.text-warning
-                            | 1
-                            sup st 
-                            | Place - James Buchanan High School - Hackathon 2006
-                        li
-                            span.fa-li
-                                i.fas.fa-trophy.text-warning
-                            | 3
-                            sup rd 
-                            | Place - James Buchanan High School - Hackathon 2005
+                            | Stanford Online Machine Learning - Coursera Certification
+
 
         // Bootstrap core JS
         script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js')
