Setting up gh-pages package

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -58,7 +58,7 @@ html(lang='en')
                         span.text-primary Soto
                     .subheading.mb-5
                         | Mexico City · (+52) 55-6676-9310 ·
-                        a(href='mailto:name@email.com') name@email.com
+                        a(href='mailto:alexandervictor550@gmail.com') alexandervictor550@gmail.com
                     p.lead.mb-5
                         | I am an experienced backend developer with expertise in Java, Spring Boot, MySQL and Microsoft Server databases. I am also skilled in using Git and have a solid understanding of front-end development, including JavaScript, CSS, HTML, and some experience with React. I am passionate about creating high-quality, scalable, and maintainable software solutions, and am always looking for new challenges to help me grow as a developer.
                     .social-icons
